# Development

./: .gitmodules  CONTRIBUTING.md  README.md  SETUP.md  dev.nix.template  embra_connect_etl.puml  package.json
.idx/: dev.nix
embra_connect_editor/: Dockerfile  docker-compose.yml
embra_connect_modules/: .env.infisical.template  .env.template  .gitignore  Makefile  README.md  build.gradle  dbt-deployment.yaml  dbt-service.yaml  docker-compose.yml  editor-deployment.yaml  editor-service.yaml  krakend.json  mongo-init.js  package.json  playground.mongodb.js  server-deployment.yaml  server-service.yaml
embra_connect_modules/ec_adapater/: Cargo.toml  Dockerfile
embra_connect_modules/editor/: init.sh
embra_connect_modules/notebook/: Dockerfile
embra_connect_modules/scripts/: apply.sh  clean_up.sh  deploy.sh  (+6 more)
embra_connect_modules/services/dbt/: Cargo.toml  Dockerfile  README.md
embra_connect_modules/services/dbt/src/: args.rs  constants.rs  lib.rs  main.rs  serialize.rs
embra_connect_modules/services/secrets_manager/: Cargo.toml
embra_connect_modules/services/secrets_manager/docker/: vault.Dockerfile
embra_connect_modules/services/secrets_manager/src/: main.rs
embra_connect_modules/services/secrets_manager/src/environment/: env_reader.rs
embra_connect_modules/services/secrets_manager/src/models/: session.rs
embra_connect_modules/services/secrets_manager/src/state/: mod.rs  state_management.rs
embra_connect_notebook/: Dockerfile  docker-compose.yml
modules/: .env.infisical.template  .gitignore  Makefile  README.md  garage.toml  package.json
(+105 files in other folders)
